@@ -181,6 +181,14 @@ Info: This watch file verifies a cryptographic signature but
  debian/upstream/signing-key.asc or
  debian/upstream/signing-key.pgp.
 
+Tag: debian-watch-could-verify-download
+Severity: normal
+Certainty: certain
+Ref: uscan(1)
+Info: One or more upstream signing keys are present but are not being
+ used.  Please enable the cryptographic verification of downloads with
+ the option 'pgpsigurlmangle' in your watch file or get rid of the key.
+
 Tag: debian-watch-contains-dh_make-template
 Severity: wishlist
 Certainty: certain
