@@ -15,4 +15,5 @@ Test-For:
  debian-watch-file-uses-deprecated-githubredir
  debian-watch-may-check-gpg-signature
  debian-watch-uses-insecure-uri
+ debian-watch-could-verify-download
 References: Debian Bug#510398
