@@ -2,6 +2,7 @@ E: watch-file-general source: debian-watch-file-uses-deprecated-githubredir line
 I: watch-file-general source: debian-watch-file-should-dversionmangle-not-uversionmangle line 5
 I: watch-file-general source: debian-watch-uses-insecure-uri http://insecure.com
 P: watch-file-general source: debian-watch-may-check-gpg-signature
+W: watch-file-general source: debian-watch-could-verify-download
 W: watch-file-general source: debian-watch-file-declares-multiple-versions line 18
 W: watch-file-general source: debian-watch-file-declares-multiple-versions line 7
 W: watch-file-general source: debian-watch-file-should-mangle-version line 12
