@@ -5,6 +5,10 @@ lintian (2.5.67) UNRELEASED; urgency=medium
   * checks/changelog-file.{desc,pm}:
     + [CL] Warn about changelog entries that have incorrectly formatted
       dates.  (Closes: #793406)
+  * checks/watch-file.{desc,pm}:
+    + [CL] Apply patch from Felix Lechner <felix.lechner@lease-up.com> to
+      check for packages where an upstream signature exists but is not
+      being used.  (Closes: #885621)
 
   * data/standards-version/release-dates:
     + [CL] Correct date(1) invocation example in comment.
